# WikipediaSandbox

./: README.md
sources/: CMakeLists.txt
sources/GraphGenerator/: CMakeLists.txt  Generator.cpp
sources/Libraries/: CMakeLists.txt  GraphsITopology.h
sources/Libraries/Geometry/: CMakeLists.txt  ITopology.h  Matrix2d.cpp  Matrix2d.h  Point2d.cpp  Point2d.h  Rectangle2d.cpp  Rectangle2d.h  TopologyGridBased.cpp  TopologyGridBased.h  TopologySimple.cpp  TopologySimple.h  Utils.cpp  Utils.h  _Library.h
sources/Libraries/Geometry_UnitTests/: CMakeLists.txt  PointComparison_UnitTests.cpp  Rectangle2d_UnitTests.cpp  Topology_UnitTests.cpp
sources/Libraries/GraphClusterization/: BFS.cpp  BFS.h  CMakeLists.txt  Clusterization.cpp  Clusterization.h  DBScanClusterization.cpp  DBScanClusterization.h  GreedyClusterization.cpp  GreedyClusterization.h  RandomClusterization.cpp  RandomClusterization.h  _Library.h
sources/Libraries/GraphClusterization_UnitTests/: BFS_UnitTests.cpp  CMakeLists.txt  GraphClusterization_UnitTests.cpp
sources/Libraries/Graphs/: CMakeLists.txt  Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h  _Library.h
sources/Libraries/GraphsIO/: CMakeLists.txt  GraphIO.cpp  GraphIO.h  _Library.h
sources/Libraries/GraphsIO_UnitTests/: CMakeLists.txt  GraphIO_UnitTests.cpp
sources/gui/: CMakeLists.txt  SceneWidget.cpp  SceneWidget.h  UiController.cpp  UiController.h  main.cpp
tools/: parse.py
